Таблицы пользователь, связь курс-пользователь, доработал контракт
