# src/main/java/ru/mentee/app/api/generated/controller/DefaultApi.java
@@ -1,0 +1,230 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.5.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package ru.mentee.app.api.generated.controller;
+
+import ru.mentee.app.api.generated.dto.CourseList;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-01-29T16:31:21.917251+03:00[Europe/Moscow]", comments = "Generator version: 7.5.0")
+@Validated
+@Tag(name = "Default", description = "the Default API")
+public interface DefaultApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * POST /api/v1/courses/{courseId}/enroll : Записаться на курс (async)
+     *
+     * @param courseId  (required)
+     * @return Запрос принят в обработку (status code 202)
+     */
+    @Operation(
+        operationId = "apiV1CoursesCourseIdEnrollPost",
+        summary = "Записаться на курс (async)",
+        responses = {
+            @ApiResponse(responseCode = "202", description = "Запрос принят в обработку")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/api/v1/courses/{courseId}/enroll"
+    )
+    
+    default ResponseEntity<Void> _apiV1CoursesCourseIdEnrollPost(
+        @Parameter(name = "courseId", description = "", required = true, in = ParameterIn.PATH) @PathVariable("courseId") String courseId
+    ) {
+        return apiV1CoursesCourseIdEnrollPost(courseId);
+    }
+
+    // Override this method
+    default  ResponseEntity<Void> apiV1CoursesCourseIdEnrollPost(String courseId) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * POST /api/v1/courses/{courseId}/lessons/{lessonId}/video : Загрузить видео урока
+     *
+     * @param courseId  (required)
+     * @param lessonId  (required)
+     * @param file  (optional)
+     * @param title  (optional)
+     * @param duration  (optional)
+     * @return Видео загружено (status code 201)
+     */
+    @Operation(
+        operationId = "apiV1CoursesCourseIdLessonsLessonIdVideoPost",
+        summary = "Загрузить видео урока",
+        responses = {
+            @ApiResponse(responseCode = "201", description = "Видео загружено")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/api/v1/courses/{courseId}/lessons/{lessonId}/video",
+        consumes = { "multipart/form-data" }
+    )
+    
+    default ResponseEntity<Void> _apiV1CoursesCourseIdLessonsLessonIdVideoPost(
+        @Parameter(name = "courseId", description = "", required = true, in = ParameterIn.PATH) @PathVariable("courseId") String courseId,
+        @Parameter(name = "lessonId", description = "", required = true, in = ParameterIn.PATH) @PathVariable("lessonId") String lessonId,
+        @Parameter(name = "file", description = "") @RequestPart(value = "file", required = false) MultipartFile file,
+        @Parameter(name = "title", description = "") @Valid @RequestParam(value = "title", required = false) String title,
+        @Parameter(name = "duration", description = "") @Valid @RequestParam(value = "duration", required = false) Integer duration
+    ) {
+        return apiV1CoursesCourseIdLessonsLessonIdVideoPost(courseId, lessonId, file, title, duration);
+    }
+
+    // Override this method
+    default  ResponseEntity<Void> apiV1CoursesCourseIdLessonsLessonIdVideoPost(String courseId, String lessonId, MultipartFile file, String title, Integer duration) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /api/v1/courses : Получить список курсов
+     *
+     * @param accept  (optional)
+     * @param category  (optional)
+     * @param level  (optional)
+     * @return Список курсов (status code 200)
+     */
+    @Operation(
+        operationId = "apiV1CoursesGet",
+        summary = "Получить список курсов",
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Список курсов", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = CourseList.class)),
+                @Content(mediaType = "application/xml", schema = @Schema(implementation = CourseList.class)),
+                @Content(mediaType = "text/csv", schema = @Schema(implementation = CourseList.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/api/v1/courses",
+        produces = { "application/json", "application/xml", "text/csv" }
+    )
+    
+    default ResponseEntity<CourseList> _apiV1CoursesGet(
+        @Parameter(name = "Accept", description = "", in = ParameterIn.HEADER) @RequestHeader(value = "Accept", required = false) String accept,
+        @Parameter(name = "category", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "category", required = false) String category,
+        @Parameter(name = "level", description = "", in = ParameterIn.QUERY) @Valid @RequestParam(value = "level", required = false) String level
+    ) {
+        return apiV1CoursesGet(accept, category, level);
+    }
+
+    // Override this method
+    default  ResponseEntity<CourseList> apiV1CoursesGet(String accept, String category, String level) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"courses\" : [ { \"duration\" : 0, \"instructor\" : { \"name\" : \"name\", \"id\" : \"id\" }, \"level\" : \"BEGINNER\", \"price\" : 6.027456183070403, \"description\" : \"description\", \"id\" : \"id\", \"title\" : \"title\", \"category\" : \"category\" }, { \"duration\" : 0, \"instructor\" : { \"name\" : \"name\", \"id\" : \"id\" }, \"level\" : \"BEGINNER\", \"price\" : 6.027456183070403, \"description\" : \"description\", \"id\" : \"id\", \"title\" : \"title\", \"category\" : \"category\" } ], \"totalCount\" : 1 }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/xml"))) {
+                    String exampleString = "<null> <totalCount>123</totalCount> </null>";
+                    ApiUtil.setExampleResponse(request, "application/xml", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("text/csv"))) {
+                    String exampleString = "Custom MIME type example not yet supported: text/csv";
+                    ApiUtil.setExampleResponse(request, "text/csv", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /api/v1/notifications/stream : Подписаться на уведомления (SSE)
+     *
+     * @return Event stream (status code 200)
+     */
+    @Operation(
+        operationId = "apiV1NotificationsStreamGet",
+        summary = "Подписаться на уведомления (SSE)",
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Event stream", content = {
+                @Content(mediaType = "text/event-stream", schema = @Schema(implementation = String.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/api/v1/notifications/stream",
+        produces = { "text/event-stream" }
+    )
+    
+    default ResponseEntity<String> _apiV1NotificationsStreamGet(
+        
+    ) {
+        return apiV1NotificationsStreamGet();
+    }
+
+    // Override this method
+    default  ResponseEntity<String> apiV1NotificationsStreamGet() {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /api/v1/users/me/progress : Прогресс текущего пользователя
+     *
+     * @return Информация о прогрессе (status code 200)
+     */
+    @Operation(
+        operationId = "apiV1UsersMeProgressGet",
+        summary = "Прогресс текущего пользователя",
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Информация о прогрессе")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/api/v1/users/me/progress"
+    )
+    
+    default ResponseEntity<Void> _apiV1UsersMeProgressGet(
+        
+    ) {
+        return apiV1UsersMeProgressGet();
+    }
+
+    // Override this method
+    default  ResponseEntity<Void> apiV1UsersMeProgressGet() {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
