# src/main/java/ru/mentee/app/domain/entity/CourseEntity.java
@@ -5,8 +5,9 @@ import jakarta.persistence.EnumType;
 import jakarta.persistence.Enumerated;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
+import jakarta.persistence.ManyToMany;
 import jakarta.persistence.ManyToOne;
-import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -15,7 +16,7 @@ import lombok.Setter;
 import lombok.ToString;
 
 import java.math.BigDecimal;
-import java.util.UUID;
+import java.util.List;
 
 @Getter
 @Entity
@@ -43,4 +44,18 @@ public class CourseEntity {
     @ManyToOne
     @JoinColumn(name = "instructor_id")
     private InstructorEntity instructor;
+
+    @ManyToMany
+    @JoinTable(
+            name = "user_course_mapping",
+            joinColumns = @JoinColumn(              // колонка для текущей сущности (User)
+                    name = "course_id",                   // имя колонки в связной таблице
+                    referencedColumnName = "id"         // имя колонки в таблице User
+            ),
+            inverseJoinColumns = @JoinColumn(       // колонка для связанной сущности (Course)
+                    name = "user_id",                 // имя колонки в связной таблице
+                    referencedColumnName = "id"         // имя колонки в таблице Course
+            )
+    )
+    private List<UserEntity> users;
 }
